<resources>
    <string name="app_name">ShakerApp</string>
    <string name="navigation_header_image">Navigation Header Image</string>
    <string name="navigation_header_sub">The best Cocktail app of all time!</string>

    <string name="popular_drinks">Popular Drinks</string>
    <string name="saved_drinks">Saved Drinks</string>
    <string name="all_drinks">All Drinks</string>
    <string name="ingredients">Ingredients</string>
    <string name="settings">Settings</string>
    <string name="cocktail_search_hint">Search for Cocktails…</string>
    <string name="ingredient_search_hint">Search for Ingredients…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="desc_cocktail_image">Cocktail Image</string>
    <string name="heading_ingredients">Ingredients</string>
    <string name="heading_instructions">Instructions</string>
    <string name="heading_glass">Glass</string>
    <string name="default_text_glass">Unknown</string>
    <string name="cocktail_icon_attribution">App icon and Cocktails:\nTheCocktailDB.com</string>
    <string name="desc_share_button">Cocktail share button</string>
    <string name="desc_like_button">Cocktail like button</string>
    <string name="desc_save_ingredient_button">Save ingredient button</string>
    <string name="desc_cocktail_name">Cocktail-Name</string>
    <string name="desc_ingredient_image">Ingredient image</string>
    <string name="desc_ingredient_name">Ingredient name</string>
    <string name="random">random</string>
    <string name="random_cocktail">Random Cocktail</string>
</resources>