<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_star"
            android:title="@string/popular_drinks" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_heart_border"
            android:title="@string/saved_drinks" />
        <item
            android:id="@+id/nav_all_drinks"
            android:icon="@drawable/ic_material_cocktail"
            android:title="@string/all_drinks" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/ic_science"
            android:title="@string/ingredients" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>