<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardBackgroundColor="@color/violet_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/small_ingredient_img"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_ingredient_image"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image_not_found"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/small_ingredient_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/desc_ingredient_name"
            android:textSize="22sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toRightOf="@id/small_ingredient_img"
            card_view:layout_constraintRight_toLeftOf="@id/ingredient_atHome_button"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ingredient_atHome_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:srcCompat="@drawable/ic_home"
            android:layout_marginRight="12dp"
            android:background="@null"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="@id/small_ingredient_layout_name"
            card_view:layout_constraintBottom_toBottomOf="@id/small_ingredient_layout_name"
            android:contentDescription="@string/desc_save_ingredient_button"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>